public/stylesheets/sass/base.sass
/* cliftonstudios.ca by Kevin McPhillips */

$background: #E2CB92
$white: #FFF
$black: #000
$very_light: #D3DEAE
$very_dark: #332b30
$dark_accent: #5F231E

$link_color: $dark_accent
$link_hover_color: #5F231E
$link_visited_color: $very_dark

$nav_background: $dark_accent
$nav_text: #F0E0B6
$nav_background_hover: #666
$nav_text_hover: #EED779

$top_background: $very_dark
$top_text: $white
$top_link: #BCDEA5
$top_link_hover: $nav_text

$footer: #312C20
$footer_text: $white
$footer_link: #B3A176

$divider_colour: #ddd
$heading_colour: $very_dark

$form_label: $very_dark
$form_background: $very_light

$notice_text: #fff
$notice_background: green
$error_text: #fff
$error_background: red

$table_head_text: $white
$table_head_background: $very_dark
$table_text: $black
$table_text_hover: $black
$table_background: #CCC
$table_background_alt: #DDD
$table_background_hover: $very_light

$img_colour: $link_hover_color
$img_hover_colour: $link_hover_color + #111


$border_radius_amount: 12px

$font_copy: Helvetica, 'Helvetica Neue', Arial, 'Lucida Grande', Tahoma, 'Sans Serif'
$font_decorative: MuseoSans500, helvetica, sans-serif

$column_width: 900px
$sidebar_width: 220px


/* Reset CSS */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td
  margin: 0
  padding: 0
  border: 0
  outline: 0
  font-size: 100%
  vertical-align: baseline
  background: transparent
  font-weight: normal

ol, ul 
  list-style: none

blockquote, q 
  quotes: none

blockquote:before, blockquote:after,
q:before, q:after 
  content: ''
  content: none

table
  border-collapse: collapse
  border-spacing: 0

/* Main */


body 
  line-height: 1
  font-family: $font_decorative
  font-size: 100%
  background-color: $footer

a
  text-decoration: none

a:hover
  text-decoration: underline


/* Shared */

.bold
  font-weight: bold
  
.italic
  font-style: italic

.float_left
  float: left

.float_right
  float: right

.clear
  clear: both

.clear_left
  clear: left

.clear_right
  clear: right

.align_left
  text-align: left

.align_right
  text-align: right

.align_center
  text-align: center
  

/* Layout */

#bgwrapper
  width: 100%
  background: $background url('../images/background.png') no-repeat right top
  padding-bottom: 70px

  #top
    width: $column_width
    margin-left: auto
    margin-right: auto
    height: 40px
    text-align: right

    p
      float: right
      display: block
      padding: 12px 22px
      -moz-border-radius: 0 0 $border_radius_amount $border_radius_amount
      -webkit-border-radius: 0 0 $border_radius_amount $border_radius_amount
      border-radius: 0 0 $border_radius_amount $border_radius_amount
      background-color: $top_background
      color: $top_text
      a
        color: $top_link
      a:hover
        color: $top_link_hover

  #header
    width: $column_width
    margin-left: auto
    margin-right: auto
    h1
      a
        color: $black
        text-decoration: none
        font-size: 3.2em
        font-weight: bold
        letter-spacing: -4px
        margin: 16px 10px -4px 10px
      a:hover
        color: $black
        text-decoration: none
      a:visited
        color: $black
    h2
      font-size: 1.2em
      font-weight: bold
      letter-spacing: -2px
    table td .bottom
      vertical-align: bottom

  #column
    width: $column_width
    margin-left: auto
    margin-right: auto
    background-color: $white
    -moz-border-radius: $border_radius_amount
    -webkit-border-radius: $border_radius_amount
    border-radius: $border_radius_amount

    #borderwrapper
      border: 1px solid black
      -moz-border-radius: $border_radius_amount
      -webkit-border-radius: $border_radius_amount
      border-radius: $border_radius_amount
      -moz-box-shadow: 0px 6px 16px 2px #000000
      -webkit-box-shadow: 0px 6px 16px 2px #000000
      box-shadow: 0px 6px 16px 2px #000000
      filter: "progid: DXImageTransform.Microsoft.Shadow(strength=6, direction=180, color='#000000')"
      -ms-filter: "progid: DXImageTransform.Microsoft.Shadow(strength=6, Direction=180, Color='#000000')"


      #nav
        background-color: $nav_background
        -moz-border-radius: $border_radius_amount $border_radius_amount 0 0
        -webkit-border-radius: $border_radius_amount $border_radius_amount 0 0
        border-radius: $border_radius_amount $border_radius_amount 0 0
        padding: 0 20px
        border-bottom: 12px solid $very_dark

        ul
          list-style: none
          li
            float: left
            background-color: yellow
            width: 110px
            text-align: center
            
            a
              background-color: $nav_background
              color: $nav_text
              float: left
              display: block
              padding: 16px 0
              font-size: 1.1em
              width: 100%
            a:hover
              background-color: $nav_background_hover
              color: $nav_text_hover
              text-decoration: none

      #navunder
        height: 8px
        margin: 0 0 26px 68px
        background: url("../images/dot.png") no-repeat scroll 0 0 transparent

      #main
        font-family: $font_copy
        font-size: 1em
        a
          color: $link_color
        a:hover
          color: $link_hover_color !important
        a:visited
          color: $link_visited_color

        #sidebar
          float: left
          width: $sidebar_width - 32px
          padding: 0 16px 20px 0

        #content
          margin: 0 20px 20px $sidebar_width
          min-height: 600px
          height: expression(this.scrollHeight > 600 ? "auto":"600px")
          -moz-border-radius: 0 0 $border_radius_amount 0
          -webkit-border-radius: 0 0 $border_radius_amount 0
          border-radius: 0 0 $border_radius_amount 0

#footer
  clear: both
  margin: 40px auto
  width: $column_width
  text-align: center
  color: $footer_text
  font-size: 1em
  font-family: $font_copy

  a
    color: $footer_link

  p
    padding: 0 25px
    line-height: 140%

/* Style */

#sidebar
  font-size: 0.9em

  h2
    font-family: $font_decorative
    font-size: 1.2em
    color: $nav_text
    background-color: $nav_background
    padding: 10px 10px 10px 14px

  ul
    margin: 8px 8px 18px 22px

    li
      font-family: $font_copy
      padding: 5px 0

    li.social img
      padding-right: 10px

  p
    font-family: $font_copy
    margin: 16px
    line-height: 125%

  a
    img.thumb
      border: 6px solid $img_colour
      margin: 8px 4px

  a:hover
    img.thumb
      border: 6px solid $img_hover_colour

#content
  h1, h2, h3
    font-family: $font_decorative
    color: $heading_colour

  h1
    font-size: 1.8em
    border-bottom: 5px solid $divider_colour
    margin: 8px 0 8px 0
    padding: 0 4px 4px 8px

  h2
    font-size: 1.3em

  h3
    font-size: 1.2em

  .subtext_left, .subtext_right
    font-size: 0.9em
    font-family: $font_decorative
    padding: 0 10px

  .subtext_left
    float: left
  .subtext_right
    float: right

  div.notice, div.error
    padding: 20px 20px 20px 100px
    margin: 6px 0 20px 0
    -moz-border-radius: $border_radius_amount
    -webkit-border-radius: $border_radius_amount
    border-radius: $border_radius_amount

    h2
      font-size: 1.2em
      font-family: $font_copy
      line-height: 1.3em

  div.notice
    background: $notice_background url('../images/notice.png') no-repeat left center
    color: $notice_text

    h2
      color: $notice_text

  div.error
    background: $error_background url('../images/error.png') no-repeat left center
    color: $error_text

    h2
      color: $error_text

    ul
      margin: 10px 10px 0 18px

      li
        font-weight: bold
        list-style-type: disc
        padding-left: 6px


  .pagination
    border-top: 5px solid $divider_colour
    padding: 6px
    text-align: center

    em
      font-style: normal
      font-weight: bold

    a, em, span
      margin: 0 8px

  .post
    padding: 16px 0 56px 0
    line-height: 140%
    font-size: 0.9em

    p
      margin: 14px 0

    ul.members
      padding-top: 20px

      li
        font-size: 1.2em
        margin-left: 20px
        padding-bottom: 4px

    a.inline
      padding-top: 14px
      padding-right: 20px
      float: right

    img.inline, img.column
      border: 6px solid $img_colour

    a
      img.thumb
        border: 6px solid $img_colour
        margin: 8px 4px

    a:hover
      img.thumb
        border: 6px solid $img_hover_colour

    
    a.inline_image
      img.inline_image
        border: 6px solid $img_colour
        margin: 8px 4px

    a.inline_image:hover
      img.inline_image
        border: 6px solid $img_hover_colour

    ul.form
      background-color: $form_background
      padding: 16px 0
      -moz-border-radius: $border_radius_amount
      -webkit-border-radius: $border_radius_amount
      border-radius: $border_radius_amount

      li
        padding: 4px 0

        label
          display: block
          float: left
          text-align: right
          font-weight: bold
          width: 200px
          margin-right: 10px
          color: $form_label

        p
          padding: 0
          margin: 8px 16px

        input, textarea
          font-family: $font_copy
          font-size: 1em

        div.field_with_errors
          display: inline

          input
            border: 3px solid $error_background

        span.note
          font-size: 0.9em
          font-weight: normal
          margin-left: 14px
          color: $very_dark

    .image_links
      padding: 20px 30px

    table.data
      border-collapse: collapse
      margin: 24px 0
      width: 100%

      th
        padding: 8px
        font-weight: bold
        background-color: $table_head_background
        color: $table_head_text  /* Needed to override the hover */

        div.pagination
          border: none
          text-align: center

          em
            font-style: normal
            font-weight: bold

          a, em, span
            margin: 0 8px

          a, a:visited
            color: $very_light !important

      td
        padding: 8px

      tr
        background-color: $table_background

      tr.even
        background-color: $table_background_alt

      tr.over
        td
          background-color: $table_background_hover

      tbody
        tr:hover
          color: $table_text_hover
          background-color: $table_background_hover

        td
          a
            color: $table_text

  ul.links
    p
      padding-left: 30px

  ul.past_events
    padding: 16px 0
    margin: 0 0 0 20px
    list-style-type: disc

    li
      span.date
        a
          font-weight: bold

  table.pictures
    padding: 0
    margin: 0
    
    td
      padding: 6px
      width: 144px
      text-align: center

    th
      text-align: center
      padding-top: 10px

  table.pictures_edit
    padding: 0
    margin: 0
    width: 100%

    td
      padding: 6px

    th
      text-align: center
      padding-top: 16px

  table
    td.executive
      font-weight: bold
      padding: 3px 30px 3px 50px
      text-align: right

  div.contact_list_entry
    border-bottom: 5px solid $divider_colour
    padding: 14px 0

    em
      color: $error_background
      font-weight: bold
      font-style: normal

